--- a/index.html
+++ b/index.html
@@ -1,16 +1,74 @@
 <html>
     <head>
-        <title>
-            C projects - Bambans
-        </title>
-        <meta charset="utf-8">
+        <title>@otavio_bambans</title>
+
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="img/otavio.ico" type="image/x-icon">
+        <link rel="icon" href="img/otavio.ico" type="image/x-icon">
+
+        <!--Meta tags-->
+        <meta name="description" content="Otávio Bambans' USP student personal web page.">
+        <meta name="keywords" content="programming, html, css, js, python, c, c++, projects, apps">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="Portuguese">
+        <meta name="author" content="Otávio Rodrigues Bambans">
+        <meta name="robots" content="all" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="uft-8">
+        <meta name="title" content="Otávio Bambans">
+
+        <!-- CSS -->        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" media="screen and (min-width: 900px)" href="css/style_pc.css">
+        <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/style_mobile.css">
     </head>
     <body>
-        <h1>
-            Hey, wait for the future!
-        </h1>
-        <h2>
-            Otávio Bambans
-        </h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="img-me"></div>
+                </div>
+                <div class="col-md-6 content">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1><b style="color: blueviolet;">~$</b>otavio_rodrigues_bambans</h1>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>> "Web Developer and I.S. student at EACH/USP"</h5>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h4>> Media</h4>
+                                </div>
+                            </div>
+                            <div class="row links">
+                                <div class="col-md-3">
+                                    <a target="_blank" href="https://github.com/otaviobambans/">_github</a>
+                                </div>  
+                                <div class="col-md-3">
+                                    <a target="_blank" href="https://www.instagram.com/otavio_bambans/">_instagram</a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a target="_blank" href="https://www.facebook.com/otavio.rodrigues.bambans">_facebook</a>
+                                </div>
+                                <div class="col-md-3">
+                                    <a target="_blank" href="http://otaviobambans.000webhostapp.com/">_projects</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- JavaScript -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
