my personal page - 1.1: image linking correction

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="shortcut icon" href="img/otavio.ico" type="image/x-icon">
         <link rel="icon" href="img/otavio.ico" type="image/x-icon">
 
+        <!-- Image link -->
+        <link rel="image_src" href="img/otavio_pixel.png">
+
         <!--Meta tags-->
         <meta name="description" content="Otávio Bambans' USP student personal web page.">
         <meta name="keywords" content="programming, html, css, js, python, c, c++, projects, apps">
