--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <a target="_blank" href="https://www.facebook.com/otavio.rodrigues.bambans">_facebook</a>
                                 </div>
                                 <div class="col-md-3">
-                                    <a target="_blank" href="http://otaviobambans.000webhostapp.com/">_projects</a>
+                                    <a target="_blank" href="http://bambans.000webhostapp.com/">_projects</a>
                                 </div>
                             </div>
                         </div>
