my personal page - 2.0

--- a/index.html
+++ b/index.html
@@ -23,51 +23,67 @@
 
         <!-- CSS -->        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" media="screen and (min-width: 900px)" href="css/style_pc.css">
-        <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/style_mobile.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <div class="img-me"></div>
-                </div>
-                <div class="col-md-6 content">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1><b style="color: blueviolet;">~$</b>otavio_rodrigues_bambans</h1>
+                            <div class="img-me">
+                                <img src="img/otavio_pixel.png" alt="otavio_pic">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 content">
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3><b class="p">></b> <b class="b">echo</b> user.name:</h3>
+                            <h5>@otavio_bambans</h5>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-12">
-                            <h5>> "Web Developer and I.S. student at EACH/USP"</h5>
+                            <h3><b class="p">></b> <b class="b">echo</b> user.description:</h3>
+                            <h5>"Web Developer and I.S. student at EACH/USP"</h5>
                         </div>
                     </div>
-                    <hr>
-                    <div class="row">
+                    <br>
+                    <div class="row links">
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h4>> Media</h4>
+                                    <h3><b class="p">></b> <b class="b">echo</b> user.media:</h3>
                                 </div>
                             </div>
-                            <div class="row links">
-                                <div class="col-md-3">
-                                    <a target="_blank" href="https://github.com/otaviobambans/">_github</a>
-                                </div>  
-                                <div class="col-md-3">
-                                    <a target="_blank" href="https://www.instagram.com/otavio_bambans/">_instagram</a>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h5>
+                                        <a target="_blank" href="https://github.com/otaviobambans/">_github</a>
+                                    </h5>
                                 </div>
-                                <div class="col-md-3">
-                                    <a target="_blank" href="https://www.facebook.com/otavio.rodrigues.bambans">_facebook</a>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h5>
+                                        <a target="_blank" href="https://www.instagram.com/otavio_bambans/">_instagram</a>
+                                    </h5>
                                 </div>
-                                <div class="col-md-3">
-                                    <a target="_blank" href="http://otaviobambans.000webhostapp.com/">_projects</a>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h5>
+                                        <a target="_blank" href="https://www.facebook.com/otavio.rodrigues.bambans">_facebook</a>
+                                    </h5>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <br>
                 </div>
             </div>
         </div>
