my personal page - 2.2

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                                         <a target="_blank" href="https://www.facebook.com/otavio.rodrigues.bambans">_facebook</a>
                                     </h5>
                                 </div>
+                            </div>
                         </div>
                     </div>
                     <br>
