--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h5>
+                                        <a target="_blank" href="https://www.linkedin.com/in/otavio-rodrigues-bambans/">_linkedin</a>
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <h5>
                                         <a target="_blank" href="https://www.instagram.com/otavio_bambans/">_instagram</a>
                                     </h5>
                                 </div>
