Add Lattes link

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
                                     </h5>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <a target="_blank" href="http://lattes.cnpq.br/9571686392212007">_Lattes</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <br>
