--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a target="_blank" href="http://lattes.cnpq.br/9571686392212007">_Lattes</a>
+                                    <a target="_blank" href="http://lattes.cnpq.br/9571686392212007">_lattes</a>
                                 </div>
                             </div>
                         </div>
