--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h3><b class="p">></b> <b class="b">echo</b> user.name:</h3>
-                            <h5>@otavio_bambans</h5>
+                            <h5>"Otávio Rodrigues Bambans"</h5>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-12">
                             <h3><b class="p">></b> <b class="b">echo</b> user.description:</h3>
-                            <h5>"Web Developer and I.S. student at EACH/USP"</h5>
+                            <h5>"Information Systems technician and Computer Information Systems bachelor's degree student at EACH/USP"</h5>
                         </div>
                     </div>
                     <br>
@@ -57,7 +57,7 @@
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h3><b class="p">></b> <b class="b">echo</b> user.media:</h3>
+                                    <h3><b class="p">></b> <b class="b">echo</b> list:user.media:</h3>
                                 </div>
                             </div>
                             <div class="row">
