--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h3><b class="p">></b> <b class="b">echo</b> list:user.media:</h3>
+                                    <h3><b class="p">></b> <b class="b">echo</b> user.media:</h3>
                                 </div>
                             </div>
                             <div class="row">
