--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="row">
                                 <div class="col-md-12">
                                     <h5>
-                                        <a target="_blank" href="https://www.linkedin.com/in/otavio-rodrigues-bambans/">_linkedin</a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/bambans/">_linkedin</a>
                                     </h5>
                                 </div>
                             </div>
