--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>@otavio_bambans</title>
+        <title>@bambans</title>
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="img/otavio.ico" type="image/x-icon">
