--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                     <br>
                     <div class="row">
                         <div class="col-md-12">
+                            <h3><b class="p">></b> <b class="b">echo</b> user.email:</h3>
+                            <h5><a target="_blank" href="mailto:otavio@bambans.top">otavio@bambans.top</a></h5>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
                             <h3><b class="p">></b> <b class="b">echo</b> user.description:</h3>
                             <h5>"Information Systems technician and Computer Information Systems bachelor's degree student at EACH/USP"</h5>
                         </div>
@@ -90,7 +97,9 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a target="_blank" href="http://lattes.cnpq.br/9571686392212007">_lattes</a>
+                                    <h5>
+                                        <a target="_blank" href="http://lattes.cnpq.br/9571686392212007">_lattes</a>
+                                    </h5>
                                 </div>
                             </div>
                         </div>
