--- a/index.html
+++ b/index.html
@@ -1,114 +1,71 @@
-<html>
-    <head>
-        <title>@bambans</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Otávio Bambans' USP student personal web page.">
+    <meta name="keywords" content="programming, html, css, js, python, c, c++, projects, apps">
+    <meta name="author" content="Otávio Rodrigues Bambans">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="Portuguese">
+    <title>@bambans</title>
 
-        <!-- Favicon -->
-        <link rel="shortcut icon" href="img/otavio.ico" type="image/x-icon">
-        <link rel="icon" href="img/otavio.ico" type="image/x-icon">
+    <!-- Favicon -->
+    <link rel="icon" href="img/otavio.ico" type="image/x-icon">
 
-        <!-- Image link -->
-        <link rel="image_src" href="img/otavio_pixel.png">
+    <!-- Image link for social sharing -->
+    <link rel="image_src" href="img/otavio_pixel.png">
 
-        <!--Meta tags-->
-        <meta name="description" content="Otávio Bambans' USP student personal web page.">
-        <meta name="keywords" content="programming, html, css, js, python, c, c++, projects, apps">
-        <meta name="robots" content="index, follow">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="language" content="Portuguese">
-        <meta name="author" content="Otávio Rodrigues Bambans">
-        <meta name="robots" content="all" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="uft-8">
-        <meta name="title" content="Otávio Bambans">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-        <!-- CSS -->        
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="img-me">
-                                <img src="img/otavio_pixel.png" alt="otavio_pic">
-                            </div>
-                        </div>
-                    </div>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="container">
+        <div class="row">
+            <!-- Profile Picture Section -->
+            <div class="col-md-6 d-flex align-items-center justify-content-center">
+                <img src="img/otavio_pixel.png" alt="Otávio Rodrigues Bambans" class="img-fluid img-me">
+            </div>
+
+            <!-- User Information Section -->
+            <div class="col-md-6 content">
+                <!-- User Name -->
+                <div class="mb-4">
+                    <h3><b class="p">></b> <b class="b">echo</b> user.name:</h3>
+                    <h5>"Otávio Rodrigues Bambans"</h5>
                 </div>
-                <div class="col-md-6 content">
-                    <br>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3><b class="p">></b> <b class="b">echo</b> user.name:</h3>
-                            <h5>"Otávio Rodrigues Bambans"</h5>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3><b class="p">></b> <b class="b">echo</b> user.email:</h3>
-                            <h5><a target="_blank" href="mailto:otavio@bambans.top">otavio@bambans.top</a></h5>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h3><b class="p">></b> <b class="b">echo</b> user.description:</h3>
-                            <h5>"Information Systems technician and Computer Information Systems bachelor's degree student at EACH/USP"</h5>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row links">
-                        <div class="col-md-12">
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h3><b class="p">></b> <b class="b">echo</b> user.media:</h3>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h5>
-                                        <a target="_blank" href="https://github.com/bambans/">_github</a>
-                                    </h5>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h5>
-                                        <a target="_blank" href="https://www.linkedin.com/in/bambans/">_linkedin</a>
-                                    </h5>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h5>
-                                        <a target="_blank" href="https://www.instagram.com/otavio_bambans/">_instagram</a>
-                                    </h5>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h5>
-                                        <a target="_blank" href="https://www.facebook.com/otavio.rodrigues.bambans">_facebook</a>
-                                    </h5>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h5>
-                                        <a target="_blank" href="http://lattes.cnpq.br/9571686392212007">_lattes</a>
-                                    </h5>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
+
+                <!-- User Email -->
+                <div class="mb-4">
+                    <h3><b class="p">></b> <b class="b">echo</b> user.email:</h3>
+                    <h5><a href="mailto:otavio@bambans.top">otavio@bambans.top</a></h5>
+                </div>
+
+                <!-- User Description -->
+                <div class="mb-4">
+                    <h3><b class="p">></b> <b class="b">echo</b> user.description:</h3>
+                    <h5>"Information Systems technician and Computer Information Systems bachelor's degree student at EACH/USP"</h5>
+                </div>
+
+                <!-- User Links -->
+                <div class="links">
+                    <h3><b class="p">></b> <b class="b">echo</b> user.media:</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="https://github.com/bambans/" target="_blank">_github</a></li>
+                        <li><a href="https://www.linkedin.com/in/bambans/" target="_blank">_linkedin</a></li>
+                        <li><a href="https://www.instagram.com/otavio_bambans/" target="_blank">_instagram</a></li>
+                        <li><a href="https://www.facebook.com/otavio.rodrigues.bambans" target="_blank">_facebook</a></li>
+                        <li><a href="http://lattes.cnpq.br/9571686392212007" target="_blank">_lattes</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <!-- JavaScript -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    </body>
+    </div>
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
 </html>
