--- a/index.html
+++ b/index.html
@@ -34,25 +34,35 @@
             <div class="col-md-6 content">
                 <!-- User Name -->
                 <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.name:</h3>
+                    <h3><b class="p">></b> <b class="b">echo</b> user.name</h3>
                     <h5>"Otávio Rodrigues Bambans"</h5>
                 </div>
 
                 <!-- User Email -->
                 <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.email:</h3>
+                    <h3><b class="p">></b> <b class="b">echo</b> user.email</h3>
                     <h5><a href="mailto:otavio@bambans.top">otavio@bambans.top</a></h5>
                 </div>
 
                 <!-- User Description -->
                 <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.description:</h3>
-                    <h5>"Information Systems technician and Computer Information Systems bachelor's degree student at EACH/USP"</h5>
+                    <h3><b class="p">></b> <b class="b">echo</b> user.description</h3>
+                    <h5>"Information Systems technician, Computer Information Systems bachelor's degree student at EACH/USP and HPC Solutions architect at Versatus HPC"</h5>
+                </div>
+
+                <!-- User Hobbies -->
+                <div class="mb-4">
+                    <h3><b class="p">></b> <b class="b">echo</b> user.hobbies</h3>
+                    <ul class="list-unstyled">
+                        <li><a href="https://rocksing.com.br/" target="_blank">_rocksing</a></li>
+                        <li><a href="https://unduo.com.br/" target="_blank">_unduo</a></li>
+                    </ul>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
 
                 <!-- User Links -->
                 <div class="links">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.media:</h3>
+                    <h3><b class="p">></b> <b class="b">echo</b> user.media</h3>
                     <ul class="list-unstyled">
                         <li><a href="https://github.com/bambans/" target="_blank">_github</a></li>
                         <li><a href="https://www.linkedin.com/in/bambans/" target="_blank">_linkedin</a></li>
