--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <li><a href="https://rocksing.com.br/" target="_blank">_rocksing</a></li>
                         <li><a href="https://unduo.com.br/" target="_blank">_unduo</a></li>
                     </ul>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
 
                 <!-- User Links -->
