--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 <!-- User Name -->
                 <div class="mb-4">
                     <h3><b class="p">></b> <b class="b">echo</b> user.name</h3>
-                    <h5>"Otávio Rodrigues Bambans"</h5>
+                    <p>"Otávio Rodrigues Bambans"</p>
                 </div>
 
                 <!-- User Email -->
                 <div class="mb-4">
                     <h3><b class="p">></b> <b class="b">echo</b> user.email</h3>
-                    <h5><a href="mailto:otavio@bambans.top">otavio@bambans.top</a></h5>
+                    <p><a href="mailto:otavio@bambans.top">_otavio@bambans.top</a></p>
                 </div>
 
                 <!-- User Description -->
                 <div class="mb-4">
                     <h3><b class="p">></b> <b class="b">echo</b> user.description</h3>
-                    <h5>"Information Systems technician, Computer Information Systems bachelor's degree student at EACH/USP and HPC Solutions architect at Versatus HPC"</h5>
+                    <p>"Information Systems technician, Computer Information Systems bachelor's degree student at EACH/USP and HPC Solutions architect at Versatus HPC"</p>
                 </div>
 
                 <!-- User Hobbies -->
