--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!-- User Description -->
                 <div class="mb-4">
                     <h3><b class="p">></b> <b class="b">echo</b> user.description</h3>
-                    <p>"Information Systems technician, Computer Information Systems bachelor's degree student at EACH/USP and HPC Solutions architect at Versatus HPC"</p>
+                    <p>"Information Systems technician, Computer Information Systems bachelor's degree student at EACH/USP and HPC Solutions Architect at Versatus HPC"</p>
                 </div>
 
                 <!-- User Hobbies -->
