--- a/index.html
+++ b/index.html
@@ -1,81 +1,175 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Otávio Bambans' USP student personal web page.">
-    <meta name="keywords" content="programming, html, css, js, python, c, c++, projects, apps">
-    <meta name="author" content="Otávio Rodrigues Bambans">
-    <meta name="robots" content="index, follow">
-    <meta name="language" content="Portuguese">
-    <title>@bambans</title>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Otávio Bambans' USP student personal web page."
+        />
+        <meta
+            name="keywords"
+            content="programming, html, css, js, python, c, c++, projects, apps"
+        />
+        <meta name="author" content="Otávio Rodrigues Bambans" />
+        <meta name="robots" content="index, follow" />
+        <meta name="language" content="Portuguese" />
+        <title>@bambans</title>
 
-    <!-- Favicon -->
-    <link rel="icon" href="img/otavio.ico" type="image/x-icon">
+        <!-- Favicon -->
+        <link rel="icon" href="img/otavio.ico" type="image/x-icon" />
 
-    <!-- Image link for social sharing -->
-    <link rel="image_src" href="img/otavio_pixel.png">
+        <!-- Image link for social sharing -->
+        <link rel="image_src" href="img/otavio_pixel.png" />
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <!-- Bootstrap CSS -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+        />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <!-- Profile Picture Section -->
-            <div class="col-md-6 d-flex align-items-center justify-content-center">
-                <img src="img/otavio_pixel.png" alt="Otávio Rodrigues Bambans" class="img-fluid img-me">
-            </div>
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="css/style.css" />
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2"></div>
 
-            <!-- User Information Section -->
-            <div class="col-md-6 content">
-                <!-- User Name -->
-                <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.name</h3>
-                    <p>"Otávio Rodrigues Bambans"</p>
+                <!-- User Information Section -->
+                <div class="col-md-8 content">
+                    <!-- User Name -->
+                    <div
+                        class="mb-4 d-flex align-items-center justify-content-center"
+                    >
+                        <img
+                            src="img/otavio_pixel.png"
+                            alt="Otávio Rodrigues Bambans"
+                            class="img-fluid img-me"
+                        />
+                    </div>
+
+                    <!-- User Name -->
+                    <div class="mb-4">
+                        <h3>
+                            <b class="p">></b> <b class="b">echo</b> user.name
+                        </h3>
+                        <p>"Otávio Rodrigues Bambans"</p>
+                    </div>
+
+                    <!-- User Email -->
+                    <div class="mb-4">
+                        <h3>
+                            <b class="p">></b> <b class="b">echo</b> user.email
+                        </h3>
+                        <p>
+                            <a href="mailto:otavio@bambans.top"
+                                >otavio@bambans.top</a
+                            >
+                        </p>
+                    </div>
+
+                    <!-- User Description -->
+                    <div class="mb-4">
+                        <h3>
+                            <b class="p">></b>
+                            <b class="b">echo</b> user.description
+                        </h3>
+                        <p>
+                            "Information Systems technician, Computer
+                            Information Systems bachelor's degree student at
+                            EACH/USP and HPC Solutions Architect at Versatus
+                            HPC"
+                        </p>
+                    </div>
+
+                    <!-- User Hobbies -->
+                    <div class="mb-4">
+                        <h3>
+                            <b class="p">></b>
+                            <b class="b">echo</b> user.hobbies
+                        </h3>
+                        <iframe
+                            style="border-radius: 12px"
+                            src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator"
+                            width="100%"
+                            height="152"
+                            frameborder="0"
+                            allowfullscreen=""
+                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                            loading="lazy"
+                        ></iframe>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a
+                                    href="https://rocksing.com.br/"
+                                    target="_blank"
+                                    >_rocksing</a
+                                >
+                            </li>
+                            <li>
+                                <a href="https://unduo.com.br/" target="_blank"
+                                    >_unduo</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
+
+                    <!-- User Links -->
+                    <div class="links">
+                        <h3>
+                            <b class="p">></b> <b class="b">echo</b> user.media
+                        </h3>
+                        <ul class="list-unstyled">
+                            <li>
+                                <a
+                                    href="https://github.com/bambans/"
+                                    target="_blank"
+                                    >_github</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.linkedin.com/in/bambans/"
+                                    target="_blank"
+                                    >_linkedin</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.instagram.com/otavio_bambans/"
+                                    target="_blank"
+                                    >_instagram</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="https://www.facebook.com/otavio.rodrigues.bambans"
+                                    target="_blank"
+                                    >_facebook</a
+                                >
+                            </li>
+                            <li>
+                                <a
+                                    href="http://lattes.cnpq.br/9571686392212007"
+                                    target="_blank"
+                                    >_lattes</a
+                                >
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-
-                <!-- User Email -->
-                <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.email</h3>
-                    <p><a href="mailto:otavio@bambans.top">_otavio@bambans.top</a></p>
-                </div>
-
-                <!-- User Description -->
-                <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.description</h3>
-                    <p>"Information Systems technician, Computer Information Systems bachelor's degree student at EACH/USP and HPC Solutions Architect at Versatus HPC"</p>
-                </div>
-
-                <!-- User Hobbies -->
-                <div class="mb-4">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.hobbies</h3>
-                    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                    <ul class="list-unstyled">
-                        <li><a href="https://rocksing.com.br/" target="_blank">_rocksing</a></li>
-                        <li><a href="https://unduo.com.br/" target="_blank">_unduo</a></li>
-                    </ul>
-                </div>
-
-                <!-- User Links -->
-                <div class="links">
-                    <h3><b class="p">></b> <b class="b">echo</b> user.media</h3>
-                    <ul class="list-unstyled">
-                        <li><a href="https://github.com/bambans/" target="_blank">_github</a></li>
-                        <li><a href="https://www.linkedin.com/in/bambans/" target="_blank">_linkedin</a></li>
-                        <li><a href="https://www.instagram.com/otavio_bambans/" target="_blank">_instagram</a></li>
-                        <li><a href="https://www.facebook.com/otavio.rodrigues.bambans" target="_blank">_facebook</a></li>
-                        <li><a href="http://lattes.cnpq.br/9571686392212007" target="_blank">_lattes</a></li>
-                    </ul>
-                </div>
+                <div class="col-md-2"></div>
             </div>
         </div>
-    </div>
 
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+        <!-- Bootstrap JS Bundle -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"
+        ></script>
+    </body>
 </html>
