--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="icon" href="img/otavio.ico" type="image/x-icon" />
 
         <!-- Image link for social sharing -->
-        <link rel="image_src" href="img/otavio_pixel.png" />
+        <link rel="image_src" href="img/otavio-pixel-sem-bg.png" />
 
         <!-- Bootstrap CSS -->
         <link
