--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         class="mb-4 d-flex align-items-center justify-content-center"
                     >
                         <img
-                            src="img/otavio_pixel.png"
+                            src="img/otavio-pixel-sem-bg.png"
                             alt="Otávio Rodrigues Bambans"
                             class="img-fluid img-me"
                         />
