--- a/index.html
+++ b/index.html
@@ -22,62 +22,85 @@
         <!-- Image link for social sharing -->
         <link rel="image_src" href="img/otavio-pixel-sem-bg.png" />
 
-        <!-- Bootstrap CSS -->
-       <link
-           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-           rel="stylesheet"
-           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-           crossorigin="anonymous"
-        >
+        <!-- Tailwind CSS -->
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                theme: {
+                    extend: {
+                        fontFamily: {
+                            'mono': ['Roboto Mono', 'monospace'],
+                        },
+                        colors: {
+                            'terminal-bg': '#121212',
+                            'terminal-purple': '#8a2be2',
+                            'terminal-cyan': '#40e0d0',
+                            'terminal-orange': '#ff6347',
+                            'terminal-orange-hover': '#7f1300',
+                        }
+                    }
+                }
+            }
+        </script>
 
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
+        
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/style.css" />
     </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-2"></div>
+    <body class="bg-terminal-bg text-white font-mono text-justify">
+        <div class="container mx-auto px-4 mt-20 lg:mt-20 w-full">
+            <div class="flex flex-wrap">
+                <!-- Left spacer -->
+                <div class="hidden md:block md:w-1/6 lg:w-1/6"></div>
 
-                <!-- User Information Section -->
-                <div class="col-md-8 content">
-                    <!-- User Name -->
-                    <div
-                        class="mb-4 d-flex align-items-center justify-content-center"
-                    >
+                <!-- Main Content Section -->
+                <div class="w-full md:w-4/6 lg:w-4/6 mx-auto">
+                    <!-- User Image -->
+                    <div class="mb-8 flex items-center justify-center fade-in">
                         <img
                             src="img/otavio-pixel-sem-bg.png"
                             alt="Otávio Rodrigues Bambans"
-                            class="img-fluid img-me"
+                            class="w-80 h-80 md:w-96 md:h-96 lg:w-80 lg:h-80 object-cover rounded-full profile-image"
                         />
                     </div>
 
                     <!-- User Name -->
-                    <div class="mb-4">
-                        <h3>
-                            <b class="p">></b> <b class="b">echo</b> user.name
+                    <div class="mb-8 section-gradient fade-in">
+                        <h3 class="text-xl font-normal mb-2">
+                            <span class="text-terminal-purple font-bold terminal-prompt">></span> 
+                            <span class="text-terminal-cyan font-bold terminal-command">echo</span> 
+                            user.name
                         </h3>
-                        <p>"Otávio Rodrigues Bambans"</p>
+                        <p class="text-white">"Otávio Rodrigues Bambans"</p>
                     </div>
 
                     <!-- User Email -->
-                    <div class="mb-4">
-                        <h3>
-                            <b class="p">></b> <b class="b">echo</b> user.email
+                    <div class="mb-8 section-gradient fade-in">
+                        <h3 class="text-xl font-normal mb-2">
+                            <span class="text-terminal-purple font-bold terminal-prompt">></span> 
+                            <span class="text-terminal-cyan font-bold terminal-command">echo</span> 
+                            user.email
                         </h3>
                         <p>
-                            <a href="mailto:otavio@bambans.top"
-                                >otavio@bambans.top</a
-                            >
+                            <a href="mailto:otavio@bambans.top" 
+                               class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect">
+                                otavio@bambans.top
+                            </a>
                         </p>
                     </div>
 
                     <!-- User Description -->
-                    <div class="mb-4">
-                        <h3>
-                            <b class="p">></b>
-                            <b class="b">echo</b> user.description
+                    <div class="mb-8 section-gradient fade-in">
+                        <h3 class="text-xl font-normal mb-2">
+                            <span class="text-terminal-purple font-bold terminal-prompt">></span>
+                            <span class="text-terminal-cyan font-bold terminal-command">echo</span> 
+                            user.description
                         </h3>
-                        <p>
+                        <p class="text-white">
                             "Information Systems technician, Computer
                             Information Systems bachelor's degree student at
                             EACH/USP and HPC Solutions Architect at Versatus
@@ -86,31 +109,38 @@
                     </div>
 
                     <!-- User Hobbies -->
-                    <div class="mb-4">
-                        <h3>
-                            <b class="p">></b>
-                            <b class="b">echo</b> user.hobbies
+                    <div class="mb-8 section-gradient fade-in">
+                        <h3 class="text-xl font-normal mb-2">
+                            <span class="text-terminal-purple font-bold terminal-prompt">></span>
+                            <span class="text-terminal-cyan font-bold terminal-command">echo</span> 
+                            user.hobbies
                         </h3>
-                        <iframe
-                            style="border-radius: 12px"
-                            src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator"
-                            width="100%"
-                            height="152"
-                            frameborder="0"
-                            allowfullscreen=""
-                            allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                            loading="lazy"
-                        ></iframe>
-                        <ul class="list-unstyled">
+                        <div class="mb-4">
+                            <iframe
+                                class="rounded-xl w-full"
+                                src="https://open.spotify.com/embed/playlist/18c6fWT86t6HyeDXaEOEYL?utm_source=generator"
+                                width="100%"
+                                height="152"
+                                frameborder="0"
+                                allowfullscreen=""
+                                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                                loading="lazy"
+                            ></iframe>
+                        </div>
+                        <ul class="list-none space-y-1">
                             <li>
                                 <a
                                     href="https://rocksing.com.br/"
                                     target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_rocksing</a
                                 >
                             </li>
                             <li>
-                                <a href="https://unduo.com.br/" target="_blank"
+                                <a 
+                                    href="https://unduo.com.br/" 
+                                    target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_unduo</a
                                 >
                             </li>
@@ -118,15 +148,18 @@
                     </div>
 
                     <!-- User Links -->
-                    <div class="links">
-                        <h3>
-                            <b class="p">></b> <b class="b">echo</b> user.media
+                    <div class="mb-8 section-gradient fade-in">
+                        <h3 class="text-xl font-normal mb-2">
+                            <span class="text-terminal-purple font-bold terminal-prompt">></span> 
+                            <span class="text-terminal-cyan font-bold terminal-command">echo</span> 
+                            user.media
                         </h3>
-                        <ul class="list-unstyled">
+                        <ul class="list-none space-y-1">
                             <li>
                                 <a
                                     href="https://github.com/bambans/"
                                     target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_github</a
                                 >
                             </li>
@@ -134,6 +167,7 @@
                                 <a
                                     href="https://www.linkedin.com/in/bambans/"
                                     target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_linkedin</a
                                 >
                             </li>
@@ -141,6 +175,7 @@
                                 <a
                                     href="https://www.instagram.com/otavio_bambans/"
                                     target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_instagram</a
                                 >
                             </li>
@@ -148,6 +183,7 @@
                                 <a
                                     href="https://www.facebook.com/otavio.rodrigues.bambans"
                                     target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_facebook</a
                                 >
                             </li>
@@ -155,21 +191,64 @@
                                 <a
                                     href="http://lattes.cnpq.br/9571686392212007"
                                     target="_blank"
+                                    class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect"
                                     >_lattes</a
                                 >
                             </li>
                         </ul>
                     </div>
+
+                    <!-- Blog Link -->
+                    <div class="mb-8 section-gradient fade-in">
+                        <h3 class="text-xl font-normal mb-2">
+                            <span class="text-terminal-purple font-bold terminal-prompt">></span> 
+                            <span class="text-terminal-cyan font-bold terminal-command">echo</span> 
+                            user.blog
+                        </h3>
+                        <p>
+                            <a
+                                href="blog/"
+                                class="text-terminal-orange hover:text-terminal-orange-hover transition-colors duration-200 link-hover-effect inline-flex items-center"
+                                >_blog <span class="ml-2">→</span></a
+                            >
+                        </p>
+                        <p class="text-gray-400 text-sm mt-2">
+                            "Personal thoughts, projects, and technical articles"
+                        </p>
+                    </div>
                 </div>
-                <div class="col-md-2"></div>
+
+                <!-- Right spacer -->
+                <div class="hidden md:block md:w-1/6 lg:w-1/6"></div>
             </div>
         </div>
 
-        <!-- Bootstrap JS Bundle -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-            crossorigin="anonymous"
-        ></script>
+        <!-- Add some JavaScript for enhanced interactivity -->
+        <script>
+            // Add fade-in effect on page load
+            document.addEventListener('DOMContentLoaded', function() {
+                const fadeElements = document.querySelectorAll('.fade-in');
+                fadeElements.forEach((element, index) => {
+                    element.style.opacity = '0';
+                    element.style.transform = 'translateY(20px)';
+                    setTimeout(() => {
+                        element.style.transition = 'opacity 0.6s ease-out, transform 0.6s ease-out';
+                        element.style.opacity = '1';
+                        element.style.transform = 'translateY(0)';
+                    }, index * 100);
+                });
+            });
+
+            // Add typing effect to the first terminal command
+            document.addEventListener('DOMContentLoaded', function() {
+                const firstCommand = document.querySelector('h3');
+                if (firstCommand) {
+                    firstCommand.classList.add('typing-effect');
+                    setTimeout(() => {
+                        firstCommand.classList.remove('typing-effect');
+                    }, 3000);
+                }
+            });
+        </script>
     </body>
 </html>
