--- a/index.html
+++ b/index.html
@@ -24,24 +24,7 @@
 
         <!-- Tailwind CSS -->
         <script src="https://cdn.tailwindcss.com"></script>
-        <script>
-            tailwind.config = {
-                theme: {
-                    extend: {
-                        fontFamily: {
-                            'mono': ['Roboto Mono', 'monospace'],
-                        },
-                        colors: {
-                            'terminal-bg': '#121212',
-                            'terminal-purple': '#8a2be2',
-                            'terminal-cyan': '#40e0d0',
-                            'terminal-orange': '#ff6347',
-                            'terminal-orange-hover': '#7f1300',
-                        }
-                    }
-                }
-            }
-        </script>
+        <script src="js/tailwind_config.js"></script>
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -223,31 +206,32 @@
             </div>
         </div>
 
-        <!-- Add some JavaScript for enhanced interactivity -->
+        <!-- Shared JavaScript utilities -->
+        <script src="js/main.js"></script>
+        
+        <!-- Page-specific JavaScript for enhanced interactivity -->
         <script>
-            // Add fade-in effect on page load
             document.addEventListener('DOMContentLoaded', function() {
-                const fadeElements = document.querySelectorAll('.fade-in');
-                fadeElements.forEach((element, index) => {
-                    element.style.opacity = '0';
-                    element.style.transform = 'translateY(20px)';
-                    setTimeout(() => {
-                        element.style.transition = 'opacity 0.6s ease-out, transform 0.6s ease-out';
-                        element.style.opacity = '1';
-                        element.style.transform = 'translateY(0)';
-                    }, index * 100);
-                });
-            });
-
-            // Add typing effect to the first terminal command
-            document.addEventListener('DOMContentLoaded', function() {
-                const firstCommand = document.querySelector('h3');
+                // Add typing effect to the first terminal command using shared utilities
+                const firstCommand = document.querySelector('h3 .terminal-command');
                 if (firstCommand) {
-                    firstCommand.classList.add('typing-effect');
-                    setTimeout(() => {
-                        firstCommand.classList.remove('typing-effect');
-                    }, 3000);
+                    const originalText = firstCommand.textContent;
+                    SiteAnimations.typeText(firstCommand, originalText, 80);
                 }
+
+                // Add terminal cursor effect to prompts
+                const prompts = document.querySelectorAll('.terminal-prompt');
+                prompts.forEach(prompt => {
+                    SiteAnimations.addCursorBlink(prompt);
+                });
+
+                // Add glitch effect on hover for links
+                const links = document.querySelectorAll('.link-hover-effect');
+                links.forEach(link => {
+                    link.addEventListener('mouseenter', () => {
+                        SiteAnimations.glitchEffect(link, 300);
+                    });
+                });
             });
         </script>
     </body>
