--- a/index.html
+++ b/index.html
@@ -59,13 +59,23 @@
                                         </h2>
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">
-                                            <a href="mailto:otavio@bambans.top" 
-                                               class="contact-link"
-                                               aria-label="Send email to Otavio Bambans">
-                                                otavio@bambans.top
-                                            </a>
-                                        </p>
+                                        <ul class="link-list" role="list">
+                                            <li>
+                                                <a href="mailto:otavio@bambans.top" 
+                                                    class="contact-link"
+                                                    aria-label="Send email to Otavio Bambans">
+                                                    otavio@bambans.top
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="tel:+5513982052585" 
+                                                   target="_blank" 
+                                                   rel="noopener noreferrer"
+                                                   class="contact-link">
+                                                    +55 (13) 98205-2585
+                                                </a>
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -174,7 +184,7 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text">
-                                            <a href="blog/" 
+                                            <a href="https://naufragodoespaco.com.br/" 
                                                class="blog-link"
                                                aria-label="Visit Otavio's blog">
                                                 Visit my blog
